--- a/StoreCrud/index.html
+++ b/StoreCrud/index.html
@@ -283,7 +283,7 @@
             <div class="uptodate">
                 <h1>STAY UPTO DATE ABOUT OUR LATEST OFFERS</h1>
                 <div>
-                    <button class="btn-carts"></button>
+                    <button class="btn-carts">
                     <i class="fa-regular fa-envelope"></i>
                     </button>
                     <form action="/keep" method="GET">
